favicon icon update

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Text Counter App</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="icon" type="image/x-icon" href="https://img.icons8.com/stickers/100/paste-as-text.png">
 
 </head>
 
